background existance of nav problem solved by visibility property

--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -43,6 +43,17 @@
     z-index: 3;
     transform: scale(0);
     transition: all 0.4s cubic-bezier(0.83, 0, 0.17, 1);
+    @include respond(max-600){
+      width: 5rem;
+      height: 5rem;
+      right: 4rem;
+    }
+
+    @include respond(max-393){
+      width: 5rem;
+      height: 5rem;
+      right: 4rem;
+    }
   }
   //nav parent block
   &__nav {
@@ -54,6 +65,7 @@
     z-index: 3;
     transition: all 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     opacity: 0;
+    visibility: hidden
     
   }
   // item = ul
@@ -107,6 +119,8 @@
   &__checkbox:checked ~ &__nav{
     width: 100%;
     opacity: 1;
+    visibility: visible;
+    
   }
 
   // build custom hamburger icon
